lab02/y.output
Terminals unused in grammar

    NEWLINE


State 33 conflicts: 1 shift/reduce
State 42 conflicts: 1 shift/reduce
State 46 conflicts: 1 shift/reduce
State 49 conflicts: 1 shift/reduce
State 50 conflicts: 2 shift/reduce
State 51 conflicts: 1 shift/reduce
State 56 conflicts: 1 shift/reduce
State 118 conflicts: 10 reduce/reduce
State 137 conflicts: 1 shift/reduce
State 145 conflicts: 1 shift/reduce
State 146 conflicts: 1 shift/reduce


Grammar

    0 $accept: Program $end

    1 $@1: ε

    2 Program: $@1 StatementList

    3 StatementList: StatementList Statement
    4              | Statement

    5 Statement: Item
    6          | LetStatement
    7          | ExpressionStatement

    8 LetStatement: LetSpecifier ID ';'
    9             | LetSpecifier ID '=' Expression ';'
   10             | LetSpecifier ID ':' Type ';'
   11             | LetSpecifier ID ':' Type '=' Expression ';'

   12 LetSpecifier: LET
   13             | LET MUT

   14 Type: PrimitiveType
   15     | ReferenceType
   16     | ArrayType

   17 ArrayType: '[' Type ';' Expression ']'

   18 ReferenceType: '&' Type

   19 PrimitiveType: INT
   20              | FLOAT
   21              | BOOL
   22              | STR

   23 ExpressionStatement: ';'
   24                    | ExpressionWithBlock ';'
   25                    | ExpressionWithoutBlock ';'
   26                    | ExpressionWithBlock
   27                    | ExpressionWithoutBlock

   28 Expression: ExpressionWithoutBlock
   29           | ExpressionWithBlock

   30 ExpressionWithoutBlock: OperatorExpression
   31                       | ReturnExpression
   32                       | BreakExpression
   33                       | RangeExpression

   34 ReturnExpression: RETURN Expression

   35 BreakExpression: BREAK Expression

   36 $@2: ε

   37 RangeExpression: DOTDOT $@2 primary_expression

   38 $@3: ε

   39 RangeExpression: primary_expression DOTDOT $@3 primary_expression
   40                | primary_expression DOTDOT

   41 OperatorExpression: AssignmentExpression

   42 AssignmentExpression: LogicalOrExpression
   43                     | ID AssignmentOperator AssignmentExpression

   44 AssignmentOperator: '='
   45                   | MUL_ASSIGN
   46                   | DIV_ASSIGN
   47                   | REM_ASSIGN
   48                   | ADD_ASSIGN
   49                   | SUB_ASSIGN

   50 LogicalOrExpression: LogicalAndExpression
   51                    | LogicalOrExpression LOR LogicalAndExpression

   52 LogicalAndExpression: OrExpression
   53                     | LogicalAndExpression LAND OrExpression

   54 OrExpression: AndExpression
   55             | OrExpression '|' AndExpression

   56 AndExpression: EqualityExpression
   57              | AndExpression '&' EqualityExpression

   58 EqualityExpression: RelationalExpression
   59                   | EqualityExpression EQL RelationalExpression
   60                   | EqualityExpression NEQ RelationalExpression

   61 RelationalExpression: ShiftExpression
   62                     | RelationalExpression '<' ShiftExpression
   63                     | RelationalExpression '>' ShiftExpression
   64                     | RelationalExpression GEQ ShiftExpression
   65                     | RelationalExpression LEQ ShiftExpression

   66 ShiftExpression: AdditiveExpression
   67                | ShiftExpression RSHIFT AdditiveExpression
   68                | ShiftExpression LSHIFT AdditiveExpression

   69 AdditiveExpression: MultiplicativeExpression
   70                   | AdditiveExpression '+' MultiplicativeExpression
   71                   | AdditiveExpression '-' MultiplicativeExpression

   72 MultiplicativeExpression: CastExpression
   73                         | MultiplicativeExpression '*' CastExpression
   74                         | MultiplicativeExpression '/' CastExpression
   75                         | MultiplicativeExpression '%' CastExpression

   76 CastExpression: UnaryExpression
   77               | UnaryExpression AS Type

   78 UnaryExpression: PostfixExpression
   79                | '-' CastExpression
   80                | '!' CastExpression
   81                | '&' CastExpression

   82 PostfixExpression: primary_expression
   83                  | PostfixExpression '(' CallParams ')'
   84                  | PostfixExpression '[' Expression ']'

   85 CallParams: CallParam
   86           | CallParams ',' CallParam

   87 CallParam: Expression
   88          | ε

   89 primary_expression: PathExpression
   90                   | LiteralExpression
   91                   | '(' Expression ')'
   92                   | ArrayExpression

   93 ArrayExpression: '[' ArrayElements ']'

   94 ArrayElements: Expression
   95              | ArrayElements ',' Expression

   96 LiteralExpression: '"' STRING_LIT '"'
   97                  | '"' '"'
   98                  | INT_LIT
   99                  | FLOAT_LIT
  100                  | TRUE
  101                  | FALSE

  102 PathExpression: ID
  103               | PrimaryFunction

  104 PrimaryFunction: PRINT
  105                | PRINTLN

  106 ExpressionWithBlock: BlockExpression
  107                    | IfExpression
  108                    | LoopExpression

  109 $@4: ε

  110 BlockExpression: '{' $@4 '}'

  111 $@5: ε

  112 BlockExpression: '{' $@5 StatementList '}'

  113 IfExpression: IF Expression BlockExpression
  114             | IF Expression BlockExpression ELSE BlockExpression

  115 LoopExpression: PredicateLoopExpression
  116               | InfiniteLoopExpression
  117               | IteratorLoopExpression

  118 PredicateLoopExpression: WHILE Expression BlockExpression

  119 InfiniteLoopExpression: LOOP BlockExpression

  120 $@6: ε

  121 IteratorLoopExpression: FOR ID IN Expression $@6 '{' StatementList '}'

  122 Item: Function

  123 $@7: ε

  124 $@8: ε

  125 Function: FUNC ID $@7 '(' FunctionParameterList ')' FunctionReturnType $@8 '{' StatementList '}'

  126 FunctionParameterList: FunctionParameter
  127                      | FunctionParameterList ',' FunctionParameter

  128 FunctionParameter: ID ':' Type
  129                  | ε

  130 FunctionReturnType: ARROW Type
  131                   | ε


Terminals, with rules where they appear

    $end (0) 0
    '!' (33) 80
    '"' (34) 96 97
    '%' (37) 75
    '&' (38) 18 57 81
    '(' (40) 83 91 125
    ')' (41) 83 91 125
    '*' (42) 73
    '+' (43) 70
    ',' (44) 86 95 127
    '-' (45) 71 79
    '/' (47) 74
    ':' (58) 10 11 128
    ';' (59) 8 9 10 11 17 23 24 25
    '<' (60) 62
    '=' (61) 9 11 44
    '>' (62) 63
    '[' (91) 17 84 93
    ']' (93) 17 84 93
    '{' (123) 110 112 121 125
    '|' (124) 55
    '}' (125) 110 112 121 125
    error (256)
    LET (258) 12 13
    MUT (259) 13
    NEWLINE (260)
    INT (261) 19
    FLOAT (262) 20
    BOOL (263) 21
    STR (264) 22
    TRUE (265) 100
    FALSE (266) 101
    GEQ (267) 64
    LEQ (268) 65
    EQL (269) 59
    NEQ (270) 60
    LOR (271) 51
    LAND (272) 53
    ADD_ASSIGN (273) 48
    SUB_ASSIGN (274) 49
    MUL_ASSIGN (275) 45
    DIV_ASSIGN (276) 46
    REM_ASSIGN (277) 47
    IF (278) 113 114
    ELSE (279) 114
    FOR (280) 121
    WHILE (281) 118
    LOOP (282) 119
    PRINT (283) 104
    PRINTLN (284) 105
    FUNC (285) 125
    RETURN (286) 34
    BREAK (287) 35
    ID (288) 8 9 10 11 43 102 121 125 128
    ARROW (289) 130
    AS (290) 77
    IN (291) 121
    DOTDOT (292) 37 39 40
    RSHIFT (293) 67
    LSHIFT (294) 68
    INT_LIT <i_val> (295) 98
    FLOAT_LIT <f_val> (296) 99
    STRING_LIT <s_val> (297) 96


Nonterminals, with rules where they appear

    $accept (64)
        on left: 0
    Program (65)
        on left: 2
        on right: 0
    $@1 (66)
        on left: 1
        on right: 2
    StatementList (67)
        on left: 3 4
        on right: 2 3 112 121 125
    Statement (68)
        on left: 5 6 7
        on right: 3 4
    LetStatement (69)
        on left: 8 9 10 11
        on right: 6
    LetSpecifier (70)
        on left: 12 13
        on right: 8 9 10 11
    Type <s_val> (71)
        on left: 14 15 16
        on right: 10 11 17 18 77 128 130
    ArrayType (72)
        on left: 17
        on right: 16
    ReferenceType (73)
        on left: 18
        on right: 15
    PrimitiveType (74)
        on left: 19 20 21 22
        on right: 14
    ExpressionStatement (75)
        on left: 23 24 25 26 27
        on right: 7
    Expression (76)
        on left: 28 29
        on right: 9 11 17 34 35 84 87 91 94 95 113 114 118 121
    ExpressionWithoutBlock (77)
        on left: 30 31 32 33
        on right: 25 27 28
    ReturnExpression (78)
        on left: 34
        on right: 31
    BreakExpression (79)
        on left: 35
        on right: 32
    RangeExpression (80)
        on left: 37 39 40
        on right: 33
    $@2 (81)
        on left: 36
        on right: 37
    $@3 (82)
        on left: 38
        on right: 39
    OperatorExpression (83)
        on left: 41
        on right: 30
    AssignmentExpression (84)
        on left: 42 43
        on right: 41 43
    AssignmentOperator (85)
        on left: 44 45 46 47 48 49
        on right: 43
    LogicalOrExpression (86)
        on left: 50 51
        on right: 42 51
    LogicalAndExpression (87)
        on left: 52 53
        on right: 50 51 53
    OrExpression (88)
        on left: 54 55
        on right: 52 53 55
    AndExpression (89)
        on left: 56 57
        on right: 54 55 57
    EqualityExpression (90)
        on left: 58 59 60
        on right: 56 57 59 60
    RelationalExpression (91)
        on left: 61 62 63 64 65
        on right: 58 59 60 62 63 64 65
    ShiftExpression (92)
        on left: 66 67 68
        on right: 61 62 63 64 65 67 68
    AdditiveExpression (93)
        on left: 69 70 71
        on right: 66 67 68 70 71
    MultiplicativeExpression (94)
        on left: 72 73 74 75
        on right: 69 70 71 73 74 75
    CastExpression (95)
        on left: 76 77
        on right: 72 73 74 75 79 80 81
    UnaryExpression (96)
        on left: 78 79 80 81
        on right: 76 77
    PostfixExpression (97)
        on left: 82 83 84
        on right: 78 83 84
    CallParams (98)
        on left: 85 86
        on right: 83 86
    CallParam (99)
        on left: 87 88
        on right: 85 86
    primary_expression (100)
        on left: 89 90 91 92
        on right: 37 39 40 82
    ArrayExpression (101)
        on left: 93
        on right: 92
    ArrayElements (102)
        on left: 94 95
        on right: 93 95
    LiteralExpression (103)
        on left: 96 97 98 99 100 101
        on right: 90
    PathExpression (104)
        on left: 102 103
        on right: 89
    PrimaryFunction (105)
        on left: 104 105
        on right: 103
    ExpressionWithBlock (106)
        on left: 106 107 108
        on right: 24 26 29
    BlockExpression (107)
        on left: 110 112
        on right: 106 113 114 118 119
    $@4 (108)
        on left: 109
        on right: 110
    $@5 (109)
        on left: 111
        on right: 112
    IfExpression (110)
        on left: 113 114
        on right: 107
    LoopExpression (111)
        on left: 115 116 117
        on right: 108
    PredicateLoopExpression (112)
        on left: 118
        on right: 115
    InfiniteLoopExpression (113)
        on left: 119
        on right: 116
    IteratorLoopExpression (114)
        on left: 121
        on right: 117
    $@6 (115)
        on left: 120
        on right: 121
    Item (116)
        on left: 122
        on right: 5
    Function (117)
        on left: 125
        on right: 122
    $@7 (118)
        on left: 123
        on right: 125
    $@8 (119)
        on left: 124
        on right: 125
    FunctionParameterList (120)
        on left: 126 127
        on right: 125 127
    FunctionParameter (121)
        on left: 128 129
        on right: 126 127
    FunctionReturnType (122)
        on left: 130 131
        on right: 125


State 0

    0 $accept: • Program $end

    $default  reduce using rule 1 ($@1)

    Program  go to state 1
    $@1      go to state 2


State 1

    0 $accept: Program • $end

    $end  shift, and go to state 3


State 2

    2 Program: $@1 • StatementList

    LET        shift, and go to state 4
    TRUE       shift, and go to state 5
    FALSE      shift, and go to state 6
    IF         shift, and go to state 7
    FOR        shift, and go to state 8
    WHILE      shift, and go to state 9
    LOOP       shift, and go to state 10
    PRINT      shift, and go to state 11
    PRINTLN    shift, and go to state 12
    FUNC       shift, and go to state 13
    RETURN     shift, and go to state 14
    BREAK      shift, and go to state 15
    ID         shift, and go to state 16
    DOTDOT     shift, and go to state 17
    INT_LIT    shift, and go to state 18
    FLOAT_LIT  shift, and go to state 19
    ';'        shift, and go to state 20
    '['        shift, and go to state 21
    '&'        shift, and go to state 22
    '-'        shift, and go to state 23
    '!'        shift, and go to state 24
    '('        shift, and go to state 25
    '"'        shift, and go to state 26
    '{'        shift, and go to state 27

    StatementList             go to state 28
    Statement                 go to state 29
    LetStatement              go to state 30
    LetSpecifier              go to state 31
    ExpressionStatement       go to state 32
    ExpressionWithoutBlock    go to state 33
    ReturnExpression          go to state 34
    BreakExpression           go to state 35
    RangeExpression           go to state 36
    OperatorExpression        go to state 37
    AssignmentExpression      go to state 38
    LogicalOrExpression       go to state 39
    LogicalAndExpression      go to state 40
    OrExpression              go to state 41
    AndExpression             go to state 42
    EqualityExpression        go to state 43
    RelationalExpression      go to state 44
    ShiftExpression           go to state 45
    AdditiveExpression        go to state 46
    MultiplicativeExpression  go to state 47
    CastExpression            go to state 48
    UnaryExpression           go to state 49
    PostfixExpression         go to state 50
    primary_expression        go to state 51
    ArrayExpression           go to state 52
    LiteralExpression         go to state 53
    PathExpression            go to state 54
    PrimaryFunction           go to state 55
    ExpressionWithBlock       go to state 56
    BlockExpression           go to state 57
    IfExpression              go to state 58
    LoopExpression            go to state 59
    PredicateLoopExpression   go to state 60
    InfiniteLoopExpression    go to state 61
    IteratorLoopExpression    go to state 62
    Item                      go to state 63
    Function                  go to state 64


State 3

    0 $accept: Program $end •

    $default  accept


State 4

   12 LetSpecifier: LET •
   13             | LET • MUT

    MUT  shift, and go to state 65

    $default  reduce using rule 12 (LetSpecifier)


State 5

  100 LiteralExpression: TRUE •

    $default  reduce using rule 100 (LiteralExpression)


State 6

  101 LiteralExpression: FALSE •

    $default  reduce using rule 101 (LiteralExpression)


State 7

  113 IfExpression: IF • Expression BlockExpression
  114             | IF • Expression BlockExpression ELSE BlockExpression

    TRUE       shift, and go to state 5
    FALSE      shift, and go to state 6
    IF         shift, and go to state 7
    FOR        shift, and go to state 8
    WHILE      shift, and go to state 9
    LOOP       shift, and go to state 10
    PRINT      shift, and go to state 11
    PRINTLN    shift, and go to state 12
    RETURN     shift, and go to state 14
    BREAK      shift, and go to state 15
    ID         shift, and go to state 16
    DOTDOT     shift, and go to state 17
    INT_LIT    shift, and go to state 18
    FLOAT_LIT  shift, and go to state 19
    '['        shift, and go to state 21
    '&'        shift, and go to state 22
    '-'        shift, and go to state 23
    '!'        shift, and go to state 24
    '('        shift, and go to state 25
    '"'        shift, and go to state 26
    '{'        shift, and go to state 27

    Expression                go to state 66
    ExpressionWithoutBlock    go to state 67
    ReturnExpression          go to state 34
    BreakExpression           go to state 35
    RangeExpression           go to state 36
    OperatorExpression        go to state 37
    AssignmentExpression      go to state 38
    LogicalOrExpression       go to state 39
    LogicalAndExpression      go to state 40
    OrExpression              go to state 41
    AndExpression             go to state 42
    EqualityExpression        go to state 43
    RelationalExpression      go to state 44
    ShiftExpression           go to state 45
    AdditiveExpression        go to state 46
    MultiplicativeExpression  go to state 47
    CastExpression            go to state 48
    UnaryExpression           go to state 49
    PostfixExpression         go to state 50
    primary_expression        go to state 51
    ArrayExpression           go to state 52
    LiteralExpression         go to state 53
    PathExpression            go to state 54
    PrimaryFunction           go to state 55
    ExpressionWithBlock       go to state 68
    BlockExpression           go to state 57
    IfExpression              go to state 58
    LoopExpression            go to state 59
    PredicateLoopExpression   go to state 60
    InfiniteLoopExpression    go to state 61
    IteratorLoopExpression    go to state 62


State 8

  121 IteratorLoopExpression: FOR • ID IN Expression $@6 '{' StatementList '}'

    ID  shift, and go to state 69


State 9

  118 PredicateLoopExpression: WHILE • Expression BlockExpression

    TRUE       shift, and go to state 5
    FALSE      shift, and go to state 6
    IF         shift, and go to state 7
    FOR        shift, and go to state 8
    WHILE      shift, and go to state 9
    LOOP       shift, and go to state 10
    PRINT      shift, and go to state 11
    PRINTLN    shift, and go to state 12
    RETURN     shift, and go to state 14
    BREAK      shift, and go to state 15
    ID         shift, and go to state 16
    DOTDOT     shift, and go to state 17
    INT_LIT    shift, and go to state 18
    FLOAT_LIT  shift, and go to state 19
    '['        shift, and go to state 21
    '&'        shift, and go to state 22
    '-'        shift, and go to state 23
    '!'        shift, and go to state 24
    '('        shift, and go to state 25
    '"'        shift, and go to state 26
    '{'        shift, and go to state 27

    Expression                go to state 70
    ExpressionWithoutBlock    go to state 67
    ReturnExpression          go to state 34
    BreakExpression           go to state 35
    RangeExpression           go to state 36
    OperatorExpression        go to state 37
    AssignmentExpression      go to state 38
    LogicalOrExpression       go to state 39
    LogicalAndExpression      go to state 40
    OrExpression              go to state 41
    AndExpression             go to state 42
    EqualityExpression        go to state 43
    RelationalExpression      go to state 44
    ShiftExpression           go to state 45
    AdditiveExpression        go to state 46
    MultiplicativeExpression  go to state 47
    CastExpression            go to state 48
    UnaryExpression           go to state 49
    PostfixExpression         go to state 50
    primary_expression        go to state 51
    ArrayExpression           go to state 52
    LiteralExpression         go to state 53
    PathExpression            go to state 54
    PrimaryFunction           go to state 55
    ExpressionWithBlock       go to state 68
    BlockExpression           go to state 57
    IfExpression              go to state 58
    LoopExpression            go to state 59
    PredicateLoopExpression   go to state 60
    InfiniteLoopExpression    go to state 61
    IteratorLoopExpression    go to state 62


State 10

  119 InfiniteLoopExpression: LOOP • BlockExpression

    '{'  shift, and go to state 27

    BlockExpression  go to state 71


State 11

  104 PrimaryFunction: PRINT •

    $default  reduce using rule 104 (PrimaryFunction)


State 12

  105 PrimaryFunction: PRINTLN •

    $default  reduce using rule 105 (PrimaryFunction)


State 13

  125 Function: FUNC • ID $@7 '(' FunctionParameterList ')' FunctionReturnType $@8 '{' StatementList '}'

    ID  shift, and go to state 72


State 14

   34 ReturnExpression: RETURN • Expression

    TRUE       shift, and go to state 5
    FALSE      shift, and go to state 6
    IF         shift, and go to state 7
    FOR        shift, and go to state 8
    WHILE      shift, and go to state 9
    LOOP       shift, and go to state 10
    PRINT      shift, and go to state 11
    PRINTLN    shift, and go to state 12
    RETURN     shift, and go to state 14
    BREAK      shift, and go to state 15
    ID         shift, and go to state 16
    DOTDOT     shift, and go to state 17
    INT_LIT    shift, and go to state 18
    FLOAT_LIT  shift, and go to state 19
    '['        shift, and go to state 21
    '&'        shift, and go to state 22
    '-'        shift, and go to state 23
    '!'        shift, and go to state 24
    '('        shift, and go to state 25
    '"'        shift, and go to state 26
    '{'        shift, and go to state 27
